# mcp-bedrock-kb

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: KnowledgeBase_Creation.md  KnowledgeBase_Creation_JP.md
examples/: basic_usage.py  document_management.py
security/: __init__.py  alert_manager.py  gdpr_deletion.py  pii_detector.py
src/bedrock_kb_mcp/: __init__.py  auth_manager.py  bedrock_client.py  concurrency.py  config_manager.py  connection_pool.py  exceptions.py  interfaces.py  s3_manager.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_alert_manager.py  test_auth_manager.py  test_bedrock_client.py  test_concurrency.py  test_config_manager.py  test_connection_pool.py  test_end_to_end.py  test_exceptions.py  test_gdpr_deletion.py  test_interfaces.py  test_pii_detector.py  test_s3_manager.py  test_s3_manager_security.py  test_server_integration.py  test_utils.py
